; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_fmtconvert.c_int32_to_float_fmul_array8_c.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_fmtconvert.c_int32_to_float_fmul_array8_c.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 (float*, i32*, i32, i32)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*, float*, i32*, float*, i32)* @int32_to_float_fmul_array8_c to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @int32_to_float_fmul_array8_c(%struct.TYPE_3__* %0, float* %1, i32* %2, float* %3, i32 %4) #0 {
  %6 = alloca %struct.TYPE_3__*, align 8
  %7 = alloca float*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca float*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %6, align 8
  store float* %1, float** %7, align 8
  store i32* %2, i32** %8, align 8
  store float* %3, float** %9, align 8
  store i32 %4, i32* %10, align 4
  store i32 0, i32* %11, align 4
  br label %12

12:                                               ; preds = %33, %5
  %13 = load i32, i32* %11, align 4
  %14 = load i32, i32* %10, align 4
  %15 = icmp slt i32 %13, %14
  br i1 %15, label %16, label %36

16:                                               ; preds = %12
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 0
  %19 = load i32 (float*, i32*, i32, i32)*, i32 (float*, i32*, i32, i32)** %18, align 8
  %20 = load float*, float** %7, align 8
  %21 = load i32, i32* %11, align 4
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds float, float* %20, i64 %22
  %24 = load i32*, i32** %8, align 8
  %25 = load i32, i32* %11, align 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds i32, i32* %24, i64 %26
  %28 = load float*, float** %9, align 8
  %29 = getelementptr inbounds float, float* %28, i32 1
  store float* %29, float** %9, align 8
  %30 = load float, float* %28, align 4
  %31 = fptosi float %30 to i32
  %32 = call i32 %19(float* %23, i32* %27, i32 %31, i32 8)
  br label %33

33:                                               ; preds = %16
  %34 = load i32, i32* %11, align 4
  %35 = add nsw i32 %34, 8
  store i32 %35, i32* %11, align 4
  br label %12

36:                                               ; preds = %12
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
